# Project-Perfect-Citizen

./: .gitignore  CNAME  Doxyfile  Project-Perfect-Citizen.opensdf  Project-Perfect-Citizen.sdf  Project-Perfect-Citizen.sln  README.md  SFMLGame.sln  description.html  factsheet.html  images.html  index.html  style.css  style2.css  style_frame.css  team.html  videos.html
Debug/: Project-Perfect-Citizen.ilk  SFMLGame.ilk
Documentation/html/: annotated.html  class_helios_1_1_base_obj-members.html  class_helios_1_1_base_obj.html  class_helios_1_1_base_obj.js  class_helios_1_1_quad_tree-members.html  class_helios_1_1_quad_tree.html  class_helios_1_1_room-members.html  class_helios_1_1_room.html  class_helios_1_1_room.js  class_helios_1_1_spr_obj-members.html  class_helios_1_1_spr_obj.html  classes.html  dir_14b350ccb366dd5e455fe2cef5e5e183.html  dir_be0d15c652eb0ca893634476ca8fdfdf.html  dir_be0d15c652eb0ca893634476ca8fdfdf.js  files.html  functions.html  functions_func.html  functions_vars.html  helios__baseobj_8h_source.html  helios__collision_8h_source.html  helios__main_8h_source.html  helios__room_8h_source.html  helios__sprobj_8h_source.html  hierarchy.html  hierarchy.js  index.html  navtreeindex0.js
Documentation/html/search/: all_5.js  all_7.js  all_8.js  classes_0.js  classes_2.js  classes_3.js  functions_1.js  functions_3.js  functions_6.js  functions_7.js  searchdata.js
Documentation/latex/: annotated.tex  class_helios_1_1_base_obj.eps  class_helios_1_1_base_obj.tex  class_helios_1_1_room.tex  class_helios_1_1_spr_obj.tex  dir_be0d15c652eb0ca893634476ca8fdfdf.tex  hierarchy.tex  refman.tex
ExcelExporter/: ExcelExporter.sln
ExcelExporter/ExcelExporter/: main.cpp  output.csv  test.txt
Project-Perfect-Citizen/: DoxygenHelp.txt  LinkHelp.txt  Project-Perfect-Citizen.rc  Project-Perfect-Citizen.vcxproj  Project-Perfect-Citizen.vcxproj.filters  WindowInterface.h  render_component.cpp  resource.h  testUpdateComponent.h  update_component.h
Project-Perfect-Citizen-Mac/Project-Perfect-Citizen-Mac/: Project-Perfect-Citizen-Mac-Info.plist  main.cpp
Project-Perfect-Citizen-Mac/Project-Perfect-Citizen-Mac.xcodeproj/: project.pbxproj
Project-Perfect-Citizen-Mac/Project-Perfect-Citizen-Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Project-Perfect-Citizen/Code/: CMakeLists.txt  PPC_cmake.h.in  ResourceDef.h  main.cpp
Project-Perfect-Citizen/Code/Engine/: BaseFileType.cpp  BaseFileType.h  BorderDecorator.cpp  BorderDecorator.h  CMakeLists.txt  ClassDiagram.cd  Component.cpp  Component.h  ComponentObsvr.cpp  ComponentObsvr.h  DesktopLogger.cpp  DesktopLogger.h  DraggableInput.cpp  DraggableInput.h  Edge.cpp  Edge.h  EmailUpdateEvent.cpp  EmailUpdateEvent.h  Engine.h  Entity.cpp  Entity.h  EntityDecorator.cpp  EntityDecorator.h  EntityLogger.cpp  EntityLogger.h  FreeFunctionObserver.h  FunctionObserver.cpp  FunctionObserver.h  InputCmpntLogger.cpp  InputCmpntLogger.h  InputHandler.cpp  InputHandler.h  LevelPacket.cpp  LevelPacket.h  LogParcel.h  Logger.cpp  Logger.h  LoggerParcel.cpp  LoggerParcel.h  Network.cpp  (+138 more)
Project-Perfect-Citizen/Code/Engine/Audio/: Audio.h  AudioLocator.cpp  AudioLocator.h  AudioLogger.cpp  AudioLogger.h  AudioQueue.cpp  AudioQueue.h  CMakeLists.txt  DesktopAudio.cpp  DesktopAudio.h  NullAudio.h  Sounds.h
Project-Perfect-Citizen/Code/Game/: BadCopRenderComponent.cpp  BadCopRenderComponent.hpp  BadCopUpdateComponent.cpp  BadCopUpdateComponent.hpp  BootLoader.cpp  BootLoader.hpp  ButtonBuilder.cpp  ButtonBuilder.h  CMakeLists.txt  ConfirmWindowBuilder.cpp  ConfirmWindowBuilder.h  ContextBuilder.cpp  ContextBuilder.h  CreateReportScreen.cpp  CreateReportScreen.h  Database.cpp  Database.h  DirectoryIconInputComponent.cpp  DirectoryIconInputComponent.h  Email.cpp  Email.h  Explorer.cpp  Explorer.h  FloppyInputComponent.cpp  FloppyInputComponent.h  FloppyRenderComponent.cpp  FloppyRenderComponent.hpp  FloppySequence.h  FloppyUpdateComponent.cpp  FloppyUpdateComponent.hpp  HelpRenderComponent.cpp  HelpRenderComponent.hpp  IconBuilder.cpp  IconBuilder.h  Inbox.cpp  Inbox.h  LoginInputCmpnt.cpp  LoginInputCmpnt.h  NetworkCheckFunctor.cpp  NetworkCheckFunctor.h  (+143 more)
Project-Perfect-Citizen/Code/Helios/: hls_object.cpp  hls_object.h  hls_object_component.h
Project-Perfect-Citizen/Debug/: vc120.idb
Project-Perfect-Citizen/License/: README.txt
Project-Perfect-Citizen/Project-Perfect-Citizen/: ResourceDef.h
Project-Perfect-Citizen/Project-Perfect-Citizen.xcodeproj/: project.pbxproj
Project-Perfect-Citizen/Resources/: ArtistResponseA.json  ArtistResponseB.json  ArtistResponseC.json  ArtistResponseD.json  ArtistTexts.json  DE1PipelineTexts.json  DekstopTutorial.txt  Desktop0.json  Desktop1.json  Desktop2.json  Desktop3.json  DesktopHacker.json  DesktopTutorial.txt  DesktopTutorialAlt.txt  Email0.json  Email0.json.backup  Email1.json  Email2.json  Email3.json  EmailHacker.json  HackerResponseA.json  HackerResponseB.json  HackerResponseC.json  HackerResponseD.json  HackerTexts.json  PipelineTutorial.txt  PipelineTutorialAlt.txt  PlayerEmail.json  PoliticianResponseA.json  PoliticianResponseB.json  PoliticianResponseC.json  PoliticianResponseD.json  PoliticianTexts.json  TeacherResponseA.json  TeacherResponseB.json  TeacherResponseC.json  TeacherResponseD.json  TeacherTexts-Old.json  TeacherTexts.json  TestDesktop.json  (+14 more)
Project-Perfect-Citizen/Saves/: desktop1.ini  playerDesktop.ini
SFMLGame/: SFMLGame.vcxproj  SFMLGame.vcxproj.filters  SpriteLoader.ini  SpriteLoaderTemplate.ini  aoe_unit.cpp  aoe_unit.h  bat.cpp  bat.h  debug.h  helios_baseobj.cpp  helios_baseobj.h  helios_main.cpp  helios_main.h  helios_room.cpp  helios_room.h  main.cpp
SFMLGame/Debug/: vc120.idb
SFMLGame/Helios/: helios_baseobj.cpp  helios_baseobj.h  helios_collision.cpp  helios_collision.h  helios_dynamic.cpp  helios_dynamic.h  helios_main.h  helios_room.cpp  helios_room.h  helios_sprobj.cpp  helios_sprobj.h  hls_object.cpp  hls_object.h  hls_object_component.h
enc_temp_folder/e6cc724eb76018d7aeb0d67c629ed6a0/: buttonRenderComponent.cpp
(+284 files in other folders)
